--- a/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
+++ b/catatanTransaksi/templates/visualisasi_laporan_keuangan.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 
 
 
@@ -10,7 +11,7 @@
       <div class="card z-index-0">
         <div class="card-header pb-2">
           <div class="d-flex flex-row-reverse">
-              <a href="">
+              <a href="{% url 'catatan-transaksi:buat' %}">
               <div class="btn btn-icon btn-3 btn-dark mb-4">
                   <span class="btn-inner--text">Buat Transaksi</span>
                   <span class="btn-inner--icon me-2 ms-2"><i class="fa fa-plus"></i></span>
@@ -27,14 +28,10 @@
             <div class="row">
             <div class="col-8">
             <div class="numbers">
-            <p class="text-sm mb-0 text-uppercase font-weight-bold">Today's Money</p>
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Total Pengeluaran</p>
             <h5 class="font-weight-bolder">
-            $53,000
+              {{total_pengeluaran|intcomma}}
             </h5>
-            <p class="mb-0">
-            <span class="text-success text-sm font-weight-bolder">+55%</span>
-            since yesterday
-            </p>
             </div>
             </div>
             <div class="col-4 text-end">
@@ -52,14 +49,10 @@
             <div class="row">
             <div class="col-8">
             <div class="numbers">
-            <p class="text-sm mb-0 text-uppercase font-weight-bold">Today's Users</p>
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Total Pemasukan</p>
             <h5 class="font-weight-bolder">
-              {{total_pemasukan}}
+              {{total_pemasukan|intcomma}}
             </h5>
-            <p class="mb-0">
-            <span class="text-success text-sm font-weight-bolder">+3%</span>
-            since last week
-            </p>
             </div>
             </div>
             <div class="col-4 text-end">
@@ -71,57 +64,7 @@
             </div>
             </div>
             </div>
-            <!-- <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-            <div class="card">
-            <div class="card-body p-3">
-            <div class="row">
-            <div class="col-8">
-            <div class="numbers">
-             <p class="text-sm mb-0 text-uppercase font-weight-bold">New Clients</p>
-            <h5 class="font-weight-bolder">
-            +3,462
-            </h5>
-            <p class="mb-0">
-            <span class="text-danger text-sm font-weight-bolder">-2%</span>
-            since last quarter
-            </p>
-            </div>
-            </div>
-            <div class="col-4 text-end">
-            <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
-            <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div>
-            <div class="col-xl-3 col-sm-6">
-            <div class="card">
-            <div class="card-body p-3">
-            <div class="row">
-            <div class="col-8">
-            <div class="numbers">
-            <p class="text-sm mb-0 text-uppercase font-weight-bold">Sales</p>
-            <h5 class="font-weight-bolder">
-            $103,430
-            </h5>
-            <p class="mb-0">
-            <span class="text-success text-sm font-weight-bolder">+5%</span> than last month
-            </p>
-            </div>
-            </div>
-            <div class="col-4 text-end">
-            <div class="icon icon-shape bg-gradient-warning shadow-warning text-center rounded-circle">
-            <i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div> -->
             </div>  
-          <!-- <div class="row"> -->
             <div class="row mt-4">
               <div class="col-lg-7 mb-lg-0 mb-4">
               <div class="card z-index-2 h-100">
@@ -150,7 +93,6 @@
               </div>
               </div>
               </div>
-        <!-- </div> -->
       </div>
     </div>
   </div>
