--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -14,7 +14,7 @@
   <div class="w-auto " id="sidenav-collapse-main">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="">
+        <a class="nav-link" href="{% url 'catatan-transaksi:view' %}">
           <div
             class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="fa fa-tv text-primary text-sm opacity-10"></i>
@@ -22,6 +22,7 @@
           <span class="nav-link-text ms-1">Dashboard</span>
         </a>
       </li>
+      {% if request.user.get_role == 'Pencatat' %}
       <li class="nav-item">
         <a class="nav-link " href="{% url 'catatan-transaksi:index' %}">
           <div
@@ -58,15 +59,7 @@
           <span class="nav-link-text ms-1">Konsultasi</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">
-          <div
-            class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="fa fa-archway text-primary text-sm opacity-10"></i>
-          </div>
-          <span class="nav-link-text ms-1">Landing Page</span>
-        </a>
-      </li>
+      {% endif %}
       <li class="nav-item mt-3">
         <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Akun</h6>
       </li>
